profile photo and pub update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,3 +33,19 @@
   code={https://github.com/WangHewei16/SYGNet-for-Real-time-Driving-Scene-Parsing},
   selected={true}
 }
+
+@article{wang2023mfcsnet,
+  title={MFCSNet: A Musician-Follower Complex Social Network for measuring musical influence},
+  author={Wang, Hewei and Li, Yijie and Gong, Kaiwen and Pathan, Muhammad Salman and Zhu, Bolun and Wen, Ziyuan and Dev, Soumyabrata},
+  journal={Entertainment Computing},
+  volume={48},
+  pages={100601},
+  year={2024},
+  publisher={Elsevier},
+  pdf={SCI-Elsevier-Entertainment-Computing-MFCSNet.pdf},
+  code={https://github.com/WangHewei16/MFCSNet-for-Measure-Musical-Influence},
+  bibtex_show={true},
+  preview={mfcsnet-entertainment.png},
+  selected={true}
+}
+
