add 2023 robio papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,3 +49,30 @@
   selected={true}
 }
 
+@inproceedings{li2023daanet,
+  title={DAANet: Dual Attention Aggregating Network for Salient Object Detection},
+  author={Li, Yijie and Wang, Hewei and Li, Zhenqi and Wang, Shaofan and Dev, Soumyabrata and Zuo, Guoyu},
+  booktitle={2023 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
+  pages={1--7},
+  year={2023},
+  organization={IEEE},
+  pdf={2023Robio_DAANet.pdf},
+  code={https://github.com/Att100/DAANet},
+  bibtex_show={true},
+  preview={daanet-robio.png},
+  selected={true}
+}
+
+@inproceedings{li2023vgrisys,
+  title={VGRISys: A Vision-Guided Robotic Intelligent System for Autonomous Instrument Calibration},
+  author={Li, Zhenqi and Wang, Hewei and Li, Yijie and Dev, Soumyabrata and Zuo, Guoyu},
+  booktitle={2023 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
+  pages={1--6},
+  year={2023},
+  organization={IEEE},
+  pdf={2023Robio_VGRISys.pdf},
+  bibtex_show={true},
+  preview={vgrisys-robio.png},
+  selected={true}
+}
+
